Fixed visibility of multiple h2 elements

--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,10 @@ body.dark .dark-theme-toggle-circle {
     position: fixed;
   }
 
+  .home-container h2 {
+    display: none;
+  }
+
   .open-menu {
     left: 0;
     z-index: 99;
